--- a/components/props-table/style.module.css
+++ b/components/props-table/style.module.css
@@ -4,66 +4,66 @@
   color: #212529;
   border-collapse: collapse;
   border: 1px solid #dee2e6;
+}
 
-  & th,
-  & td {
-    padding: 0.75rem;
-    vertical-align: top;
-    border-top: 1px solid #dee2e6;
-    border-right: 1px solid #dee2e6;
-  }
+.root th,
+.root td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+  border-right: 1px solid #dee2e6;
+}
 
-  & thead th {
-    vertical-align: bottom;
-    border-bottom: 2px solid #dee2e6;
-    text-align: left;
-  }
+.root thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+  text-align: left;
+}
 
-  & tbody + tbody {
-    border-top: 2px solid #dee2e6;
-  }
+.root tbody + tbody {
+  border-top: 2px solid #dee2e6;
+}
 
-  & tbody tr:nth-of-type(odd) {
-    background-color: rgba(0, 0, 0, 0.05);
-  }
+.root tbody tr:nth-of-type(odd) {
+  background-color: rgba(0, 0, 0, 0.05);
+}
 
-  & thead th {
-    color: #fff;
-    background-color: #343a40;
-    border-color: #454d55;
-  }
+.root thead th {
+  color: #fff;
+  background-color: #343a40;
+  border-color: #454d55;
+}
 
-  & .required {
-    color: #c41515;
-  }
+.root .required {
+  color: #c41515;
+}
 
-  & .type {
-    font-size: 0.8em;
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
-      DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
-    color: #777;
-  }
+.root .type {
+  font-size: 0.8em;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
+  color: #777;
+}
 
-  & .options {
-    font-size: 0.9em;
-    margin-top: 0.5em;
+.root .options {
+  font-size: 0.9em;
+  margin-top: 0.5em;
+}
 
-    & strong {
-      opacity: 0.6;
-    }
+.root .options strong {
+  opacity: 0.6;
+}
 
-    & code {
-      color: #e86c60;
-    }
-  }
+.root .options code {
+  color: #e86c60;
+}
 
-  & .containsNested {
-    font-size: 0.9em;
-    font-style: italic;
-    color: #888;
-  }
+.root .containsNested {
+  font-size: 0.9em;
+  font-style: italic;
+  color: #888;
+}
 
-  & .prefix {
-    color: #888;
-  }
+.root .prefix {
+  color: #888;
 }
