--- a/components/shared.module.css
+++ b/components/shared.module.css
@@ -24,19 +24,19 @@
   opacity: 0.5;
   cursor: pointer;
   transition: opacity 0.25s ease;
+}
 
-  &:hover {
-    opacity: 0.9;
-  }
+.save:hover {
+  opacity: 0.9;
+}
 
-  &:before {
-    background: url('../img/share.svg');
-    width: 16px;
-    height: 16px;
-    content: '';
-    display: block;
-    position: absolute;
-    left: 15px;
-    top: 8px;
-  }
+.save:before {
+  background: url('../img/share.svg');
+  width: 16px;
+  height: 16px;
+  content: '';
+  display: block;
+  position: absolute;
+  left: 15px;
+  top: 8px;
 }
