--- a/components/knobs-component/style.module.css
+++ b/components/knobs-component/style.module.css
@@ -113,8 +113,15 @@
   outline: 0;
 }
 
+.html {
+  composes: input;
+  font-family: monospace;
+  font-size: 14px;
+  line-height: 22px;
+  width: 100%;
+}
+
 .textarea {
-	composes: input;
-	resize: vertical;
+  composes: input;
   width: 100%;
 }
