--- a/style.module.css
+++ b/style.module.css
@@ -66,6 +66,21 @@
   flex-shrink: 0;
 }
 
+.sidebar .search {
+  font-size: 1rem;
+  padding: 1rem;
+  border: 1px solid #373942;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: white;
+  margin: 1rem 1rem 2rem;
+  border-radius: 4px;
+}
+
+.sidebar .search:focus {
+  outline: 0;
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
 .notFound {
   background: #df7873;
   padding: 12px 17px;
