--- a/style.module.css
+++ b/style.module.css
@@ -68,17 +68,35 @@
 
 .sidebar .search {
   font-size: 1rem;
-  padding: 1rem;
+  padding: 0.75rem 1rem;
   border: 1px solid #373942;
   background-color: rgba(255, 255, 255, 0.1);
   color: white;
-  margin: 1rem 1rem 2rem;
   border-radius: 4px;
+  width: 100%;
 }
 
 .sidebar .search:focus {
   outline: 0;
   border-color: rgba(255, 255, 255, 0.3);
+}
+
+.sidebar .searchContainer {
+  position: relative;
+  margin: 1rem 1rem 2rem;
+}
+
+.sidebar .searchHint {
+  position: absolute;
+  right: 0.75rem;
+  top: 10px;
+  border: 1px solid;
+  height: 24px;
+  width: 24px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 0.4);
 }
 
 .notFound {
