--- a/style.module.css
+++ b/style.module.css
@@ -54,6 +54,10 @@
   background: rgba(255, 255, 255, 0.1);
 }
 
+.sidebar li a {
+  color: white;
+}
+
 .sidebar .logo {
   max-width: 80%;
   margin: 20px 30px 25px 30px;
