remove base styling to prevent conflicts with user styles

--- a/components/props-table/style.module.css
+++ b/components/props-table/style.module.css
@@ -4,6 +4,15 @@
   color: #212529;
   border-collapse: collapse;
   border: 1px solid #dee2e6;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 16px;
+  line-height: 1.625;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
 }
 
 .root th,
