--- a/style.module.css
+++ b/style.module.css
@@ -1,18 +1,3 @@
-.root {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  font-size: 16px;
-  line-height: 1.625;
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-}
-
-.root * {
-  box-sizing: border-box;
-}
-
 .sidebar {
   background: #151b1d;
   color: white;
@@ -27,6 +12,19 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 16px;
+  line-height: 1.625;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+}
+
+.sidebar > * {
+  box-sizing: border-box;
 }
 
 .sidebar:before {
@@ -53,6 +51,7 @@
   padding: 10px 30px 10px 25px;
   display: block;
   color: white;
+  text-decoration: none;
 }
 
 .sidebar .logo {
@@ -74,7 +73,6 @@
   background-color: rgba(255, 255, 255, 0.1);
   color: white;
   border-radius: 4px;
-  width: 100%;
 }
 
 .sidebar .search:focus {
@@ -119,6 +117,13 @@
   margin-bottom: 1em;
   line-height: 1em;
   font-size: 2.2em;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  line-height: 1.625;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
   color: #151b1d;
 }
 
