--- a/style.module.css
+++ b/style.module.css
@@ -56,6 +56,7 @@
   background-color: rgba(255, 255, 255, 0.1);
   color: white;
   border-radius: 4px;
+  max-width: 100%;
 }
 
 .sidebar .search:focus {
