--- a/style.module.css
+++ b/style.module.css
@@ -38,6 +38,12 @@
   pointer-events: none;
 }
 
+.sidebar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .sidebar li.active a {
   border-left: 5px solid rgba(255, 237, 114, 0.8);
   background: rgba(255, 255, 255, 0.05);
