--- a/style.module.css
+++ b/style.module.css
@@ -57,7 +57,7 @@
 }
 
 .sidebar .search {
-  width: 100%;
+  box-sizing: border-box;
   font-size: 1rem;
   padding: 0.75rem 2.5rem 0.75rem 1rem;
   border: 1px solid #373942;
