--- a/style.module.css
+++ b/style.module.css
@@ -126,7 +126,7 @@
   justify-content: center;
   align-items: center;
   padding: 0;
-  backround-color: transparent;
+  background-color: transparent;
 }
 
 .stage > :global(.__swingset-headline) {
