--- a/packages/swingset-theme-hashicorp/src/css/styles.css
+++ b/packages/swingset-theme-hashicorp/src/css/styles.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* h1,
+h2,
+h3,
+h4,
+h5,
+h6 
+> a{
+    width: 200px;
+} */
+
+a > span.icon-link:before{
+    content: "#";
+}
